kubernetes/blog-service.deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-service-svc

spec:
  selector:
    app: blog-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
  labels:
    app: blog-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
      - name: blog-service-image
        image: gcr.io/rising-lyceum-426405-n4/blog-service:v1.0.1
        imagePullPolicy: Always

        ports:
        - containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /blogs
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 20
