kubernetes/nginx.deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-svc-load
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ayusha2599/nginx-service:latest
        ports:
        - containerPort: 80
