kubernetes/user-service.deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc

spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service-image
        image: gcr.io/rising-lyceum-426405-n4/user-service:v1.0.1
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        livenessProbe:
          httpGet:
            path: /users
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 20
